--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 # FMJ deps
 	loader_dependency = >=0.15.0
 	minecraft_dependency = 1.19.4
+	carpet_dependency = 1.19.4-1.4.101+v230319
 
 # Mod Properties
 	mod_version = 0.1.0
