--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.6.11'
+	id 'fabric-loom' version '1.7.2'
 	id 'maven-publish'
 }
 
@@ -13,6 +13,10 @@ base {
 repositories {
 	maven {
 		url = "https://maven.parchmentmc.org"
+	}
+	maven { // Vineflower
+		name = "sonatype-oss-snapshots1"
+		url = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
 	}
 }
 
@@ -32,7 +36,7 @@ afterEvaluate {
 }
 
 dependencies {
-	vineflowerDecompilerClasspath "org.vineflower:vineflower:1.10.1"
+	vineflowerDecompilerClasspath "org.vineflower:vineflower:1.11.0-20240523.155640-28"
 
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
