--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,12 @@ org.gradle.jvmargs=-Xmx1G
 # FMJ deps
 	loader_dependency = >=0.15.0
 	minecraft_dependency = 1.19.4
-	carpet_dependency = 1.19.4-1.4.101+v230319
+	carpet_dependency = ~1.4
 
 # Mod Properties
 	mod_version = 0.1.0
 	maven_group = wavetech.me.wavecarpet
 	archives_base_name = wavecarpet
 
+# Dependencies
+	carpet_version = 1.19.4-1.4.101+v230319
